<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Feira Fácil</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Configurações</string>
    <string name="title_activity_promo">Produtos</string>
    <string name="title_section1">Ideal pornto 100 reis</string>
    <string name="title_section2">Ideal Feira central</string>
    <string name="title_section3">Ideal Floriano Peixoto</string>
    <string name="deseja_realmente_sair"> Deseja mesmo sair?</string>
    <string name="painel_user">Usuário</string>
    <string name="sobre">Sobre</string>
    <string name="ajuda">Ajuda</string>
    <string name="title_activity_supermercado">Supermercado</string>
    <string name="facebook_app_id">911950285504204</string>
    <string name="login_facebook">Entrar com facebook</string>
    <string name="voltar">voltar</string>
    <string name="nome">Nome:</string>
    <string name="cpf">CPF:</string>
    <string name="senha">Senha:</string>
    <string name="confirme_senha">Repita a senha:</string>
    <string name="salvar">Salvar</string>
    <string name="email">Email:</string>
    <string name="selecionar">Selecionar</string>
    <string name="title_activity_carrinho">Carrinho</string>
    <string name="limpar_carrinho">Limpar Carrinho</string>
    <string name="please_wait">Por favor, espere</string>
    <string name="sucess_order">Pedido realizado com sucesso</string>
    <string name="sending_order">Enviando pedido</string>
    <string name="drawer_open">Open naigation drawer</string>
    <string name="drawer_close">Close naigation drawer</string>

</resources>
